--- a/ws/src/main/resources/application.yaml
+++ b/ws/src/main/resources/application.yaml
@@ -1,5 +1,13 @@
+#spring:
+#  datasource:
+#    url: jdbc:h2:./devdb
+#    username: sa
+#  jpa:#    hibernate:#      ddl-auto: update
+
 spring:
   datasource:
-    url: jdbc:h2:./devdb
-    username: sa
-  jpa:    hibernate:      ddl-auto: update
+    url: jdbc:h2:mem:testdb
+          jpa:    properties:      javax:
+        persistence:
+          validation:
+            mode: none
