--- a/ws/src/main/resources/application.yaml
+++ b/ws/src/main/resources/application.yaml
@@ -7,7 +7,11 @@
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
-          jpa:    properties:      javax:
+  data:    web:      pageable:
+        default-page-size: 10
+        max-page-size: 100
+                jpa:    properties:      javax:
         persistence:
           validation:
             mode: none
+            
