--- a/ws/src/main/resources/application.yaml
+++ b/ws/src/main/resources/application.yaml
@@ -1,17 +1,22 @@
-#spring:
-#  datasource:
-#    url: jdbc:h2:./devdb
-#    username: sa
-#  jpa:#    hibernate:#      ddl-auto: update
-
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
   data:    web:      pageable:
         default-page-size: 10
         max-page-size: 100
-                jpa:    properties:      javax:
+  profiles:    active:    - dev
+  jpa:    properties:      javax:
         persistence:
           validation:
             mode: none
-            
+
+---
+spring:
+  profiles: production
+tweety:
+  upload-path: storage-production
+---
+spring:
+  profiles: dev
+tweety:
+  upload-path: storage-dev
