--- a/ws/pom.xml
+++ b/ws/pom.xml
@@ -64,6 +64,11 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.tika</groupId>
+		    <artifactId>tika-core</artifactId>
+		    <version>2.0.0-ALPHA</version>
+		</dependency>
 	</dependencies>
 
 	<build>
