Tweety Attachment for WS and Client Side - Chapter 19

--- a/ws/src/main/resources/application.yaml
+++ b/ws/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
         persistence:
           validation:
             mode: none
-
+              servlet:    multipart:      max-file-size: 10MB        
 ---
 spring:
   profiles: production
